--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -13,15 +13,16 @@ crossorigin="anonymous" />
 <!-- header --> 
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary py-4"> 
 <div class="container"> 
-<a class="navbar-brand" href="#">Online Store</a> 
+<a class="navbar-brand" href="{% url 'home' %}">Online Store</a> 
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span> 
 </button> 
 <div class="collapse navbar-collapse" id="navbarNavAltMarkup"> 
   <div class="navbar-nav ms-auto"> 
-    <a class="nav-link active" href="#">Home</a> 
-    <a class="nav-link active" href="#">About</a> 
+    <a class="nav-link active" href="{% url 'home' %}">Home</a> 
+    <a class="nav-link active" href="{% url 'about' %}">About</a> 
+    <a class="nav-link active" href="{% url 'contact' %}">Contact</a> 
   </div> 
 </div> 
 </div> 
@@ -51,8 +52,8 @@ aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navi
 </small> 
 </div> 
 </div> 
+{% endblock %}
 <!-- footer --> 
-{% endblock %} 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
 crossorigin="anonymous"> 
